<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ImageView
        android:id="@+id/ivProfilePhoto"
        android:layout_width="@dimen/profile_size"
        android:layout_height="@dimen/profile_size"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="40dp"
        tools:src="@drawable/twitter_logo_white_on_blue"/>

    <TextView
        android:id="@+id/tvReplyPlaceholder"
        style="@style/InfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ivProfilePhoto"
        android:layout_marginBottom="10dp"
        android:visibility="gone"
        tools:text="In reply to Dianne Askew"/>

    <EditText
        android:id="@+id/etMessage"
        style="@style/TweetComposeText"
        android:layout_above="@+id/view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvReplyPlaceholder"
        android:hint="@string/statusHint"/>

    <Button
        android:id="@+id/btClose"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/clear"/>

    <TextView
        android:id="@+id/tvName"
        style="@style/SecondaryText"
        android:layout_alignTop="@+id/ivProfilePhoto"
        android:layout_toLeftOf="@+id/ivProfilePhoto"
        android:layout_toStartOf="@+id/ivProfilePhoto"
        tools:text="Dianne Askew"/>

    <TextView
        android:id="@+id/tvScreenName"
        style="@style/SecondaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvName"
        android:layout_toLeftOf="@+id/ivProfilePhoto"
        android:layout_toStartOf="@+id/ivProfilePhoto"
        tools:text="\@dianne_askew"/>

    <View
        android:id="@+id/view"
        style="@style/HorizontalLine"
        android:layout_above="@+id/btTweet"/>

    <TextView
        android:id="@+id/tvCharsLeft"
        style="@style/InfoText"
        android:layout_alignBaseline="@+id/btTweet"
        android:layout_alignBottom="@+id/btTweet"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/btTweet"
        android:layout_toStartOf="@+id/btTweet"
        android:text="@string/tweetLimit"
        android:textColor="@color/dark_gray"/>

    <Button
        android:id="@+id/btTweet"
        style="@style/TweetButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:enabled="false"
        android:text="@string/tweet"/>


</RelativeLayout>